<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_conversa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PizzaActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:scaleType="centerCrop"
        android:id="@+id/imgPizza"
        android:elevation="8dp"
        tools:src="@drawable/calabresa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Sabor X"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/txtSabor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescricao"
            tools:text="Descricçao aqui" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Igrediente"
            android:text="@string/strIgrediente"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIgrediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Ingrediemtes aqui list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/strAlergia"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAlergia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Arlegia list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/strNota"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="5" />
    </LinearLayout>
</LinearLayout>